Change & Version Information
============================

The following is a summary of changes and improvements to
:mod:`eulxml`.  New features in each version should be listed, with
any necessary information about installation or upgrade notes.


0.19.0
-------

* Corrected a minor bug where schema validation errors were not cleared between
  multiple validations.


0.18.0 - Formset Ordering and DateTime
--------------------------------------

* :class:`eulxml.forms.xmlobject.XmlObjectForm` formsets now support
  ``can_order``.
* :class:`eulxml.xmlmap.fields.DateTimeField` is now included in
  available :mod:`eulxml.xmlmap` fields.  This replaces the previously
  officially-unreleased, under-documented and -tested and misnamed
  ``DateField``.  Date-time format handling and whitespace
  normalization contributed by `jheath- <https://github.com/jheath->`_.


0.17.1 - Bugfix Release
-----------------------

* Fixed an error in eulxml.xpath parse that resulted in parse errors
  when other lexers are defined.


0.17.0 - Minor Enhancements
---------------------------

* :class:`eulxml.xmlmap.XmlObject` now supports lazy-loading for XSD
  Schemas.  To take advantage of this feature,
  :class:`~eulxml.xmlmap.XmlObject` subclasses should define an
  ``XSD_SCHEMA`` location but should not set an ``xmlschema``.
* When :ref:`field <xmlmap-field>` mapped on a
  :class:`eulxml.xmlmap.XmlObject` is deleted, any XPath predicates
  that could have been automatically constructed when setting the
  value will be deleted from the :class:`~eulxml.xmlmap.XmlObject`
  where possible, if they are otherwise empty.


0.16.0 - MODS and PREMIS
------------------------

* Add basic support for `MODS <http://www.loc.gov/standards/mods/>`_ in
  :mod:`eulxml.xmlmap.mods`.
* Add basic support for `PREMIS <http://www.loc.gov/standards/premis/>`_ in
  :mod:`eulxml.xmlmap.premis`.
* Minor logging and error handling improvements.

0.15.3 - Minor Enhancement
--------------------------
