@@ -11,6 +11,14 @@ any necessary information about installation or upgrade notes.
 
 * Corrected a minor bug where schema validation errors were not cleared between
   multiple validations.
+* To avoid permission denied warning for auto-generated parser files,
+  parsetab files are now created in python tempdir if the running user
+  doesn't have write permission in the package installation directory.
+  [`Issue 1 <https://github.com/emory-libraries/eulxml/issues/1>`_]
+* When an XSLT transformation results in an empty document,
+  :meth:`eulxml.xmlap.XmlObject.xsl_transform` now returns None.
+  [`Issue 6 <https://github.com/emory-libraries/eulxml/issues/6>`_]
+*
 
 
 0.18.0 - Formset Ordering and DateTime
